--- a/WIMM/Base.lproj/Main.storyboard
+++ b/WIMM/Base.lproj/Main.storyboard
@@ -72,13 +72,24 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="HOLA" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qwn-HF-tDT">
-                                                    <rect key="frame" x="62" y="11" width="54" height="24"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="tx8-LH-fhy">
+                                                    <rect key="frame" x="62" y="11" width="48" height="44.5"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                                    <color key="textColor" name="OrangeRed"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Place" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qwn-HF-tDT" userLabel="Place Label">
+                                                            <rect key="frame" x="0.0" y="0.0" width="48" height="24"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                            <color key="textColor" name="LittleGray"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bry-5r-xsK" userLabel="Date Label">
+                                                            <rect key="frame" x="0.0" y="24" width="48" height="20.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <color key="textColor" name="LittleGray"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
                                             </subviews>
                                             <color key="backgroundColor" name="MediumBlue"/>
                                         </tableViewCellContentView>
@@ -122,18 +133,35 @@
         <!--Map VC-->
         <scene sceneID="usE-2X-zKG">
             <objects>
-                <viewController title="Map VC" id="TAN-b6-W4U" customClass="MapVC" customModule="WIMM" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Map VC" id="TAN-b6-W4U" customClass="MapViewController" customModule="WIMM" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="k1B-ef-huY">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="hybrid" translatesAutoresizingMaskIntoConstraints="NO" id="Od3-0Q-hhC">
+                                <rect key="frame" x="40" y="131" width="240" height="217"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </mapView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uJ6-5q-5Bn">
+                                <rect key="frame" x="137" y="393" width="46" height="66"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="locationUser" destination="TAN-b6-W4U" eventType="touchUpInside" id="iyc-B4-AdH"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" name="OrangeRed"/>
                         <viewLayoutGuide key="safeArea" id="ZMf-Wy-MMU"/>
                     </view>
                     <navigationItem key="navigationItem" id="UJi-aJ-Qs7"/>
+                    <connections>
+                        <outlet property="mapView" destination="Od3-0Q-hhC" id="bqL-Dw-R1E"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Z6Y-bK-Bk2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2612" y="-942"/>
+            <point key="canvasLocation" x="-2613.75" y="-942.25352112676057"/>
         </scene>
         <!--My Place Detail-->
         <scene sceneID="Ghm-lO-xiI">
@@ -142,13 +170,104 @@
                     <view key="view" contentMode="scaleToFill" id="TsB-gL-TNA">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PLACE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Ua-uC-Nf3">
+                                <rect key="frame" x="133.5" y="82" width="53" height="17"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="17" id="Qup-Hp-yEb"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="ITCAvantGardeStd-Demi" family="ITC Avant Garde Gothic Std" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="justified" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vcs-QB-iLv" userLabel="Body">
+                                <rect key="frame" x="16" y="117" width="288" height="115"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="288" id="agz-io-sBK"/>
+                                    <constraint firstAttribute="height" constant="115" id="mzS-t7-UJn"/>
+                                </constraints>
+                                <string key="text">Lorem ipsum dolor sit amet consectetur adipiscing elit interdum rutrum phasellus suspendisse, lacus eros potenti penatibus pretium neque ante eget luctus dapibus aliquam.</string>
+                                <fontDescription key="fontDescription" name="ITCAvantGardeStd-Bk" family="ITC Avant Garde Gothic Std" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="CLr-UC-BrG" userLabel="HorizontalSV">
+                                <rect key="frame" x="91.5" y="250" width="137" height="49"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fnr-5O-9ZC" userLabel="VerticalSV1">
+                                        <rect key="frame" x="0.0" y="0.0" width="137" height="17"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Since:" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jo7-p5-LLV">
+                                                <rect key="frame" x="0.0" y="0.0" width="59.5" height="17"/>
+                                                <fontDescription key="fontDescription" name="ITCAvantGardeStd-Bk" family="ITC Avant Garde Gothic Std" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="31/05/19" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ixr-4b-9hs">
+                                                <rect key="frame" x="59.5" y="0.0" width="77.5" height="17"/>
+                                                <fontDescription key="fontDescription" name="ITCAvantGardeStd-Bk" family="ITC Avant Garde Gothic Std" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="cJ3-pt-lhO" userLabel="VerticalSV2">
+                                        <rect key="frame" x="0.0" y="32" width="137" height="17"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Until:" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k1a-8C-VsY">
+                                                <rect key="frame" x="0.0" y="0.0" width="39.5" height="17"/>
+                                                <fontDescription key="fontDescription" name="ITCAvantGardeStd-Bk" family="ITC Avant Garde Gothic Std" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="01/06/19" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Xt-kg-lWO">
+                                                <rect key="frame" x="59.5" y="0.0" width="77.5" height="17"/>
+                                                <fontDescription key="fontDescription" name="ITCAvantGardeStd-Bk" family="ITC Avant Garde Gothic Std" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="ASP-3w-vso">
+                                <rect key="frame" x="13" y="331" width="294" height="157"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="157" id="G2p-UW-IgD"/>
+                                    <constraint firstAttribute="width" constant="294" id="aHA-64-0Cc"/>
+                                </constraints>
+                            </mapView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hL2-ou-eCi">
+                                <rect key="frame" x="133" y="489" width="46" height="30"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="locationUser" destination="LxR-Q2-JVf" eventType="touchUpInside" id="faM-eS-iMQ"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" name="BlueSky"/>
+                        <constraints>
+                            <constraint firstItem="4Ua-uC-Nf3" firstAttribute="centerX" secondItem="TsB-gL-TNA" secondAttribute="centerX" id="7rt-4T-DnO"/>
+                            <constraint firstItem="CLr-UC-BrG" firstAttribute="centerX" secondItem="TsB-gL-TNA" secondAttribute="centerX" id="G5X-z1-L8Q"/>
+                            <constraint firstItem="ASP-3w-vso" firstAttribute="top" secondItem="CLr-UC-BrG" secondAttribute="bottom" constant="32" id="JjL-I9-tVn"/>
+                            <constraint firstItem="hL2-ou-eCi" firstAttribute="bottom" secondItem="O4N-5o-P2M" secondAttribute="bottom" id="Oag-bX-Vaw"/>
+                            <constraint firstItem="O4N-5o-P2M" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="hL2-ou-eCi" secondAttribute="trailing" symbolic="YES" id="S8u-RH-PqP"/>
+                            <constraint firstItem="vcs-QB-iLv" firstAttribute="top" secondItem="4Ua-uC-Nf3" secondAttribute="bottom" constant="18" id="WCv-Lm-h11"/>
+                            <constraint firstItem="CLr-UC-BrG" firstAttribute="top" secondItem="vcs-QB-iLv" secondAttribute="bottom" constant="18" id="cTN-Ef-9hW"/>
+                            <constraint firstItem="4Ua-uC-Nf3" firstAttribute="top" secondItem="O4N-5o-P2M" secondAttribute="top" constant="18" id="jXS-gC-Xtc"/>
+                            <constraint firstItem="ASP-3w-vso" firstAttribute="centerX" secondItem="TsB-gL-TNA" secondAttribute="centerX" id="lLx-yj-fyV"/>
+                            <constraint firstItem="hL2-ou-eCi" firstAttribute="leading" secondItem="O4N-5o-P2M" secondAttribute="leading" constant="133" id="nvB-GL-vWb"/>
+                            <constraint firstItem="vcs-QB-iLv" firstAttribute="centerX" secondItem="TsB-gL-TNA" secondAttribute="centerX" id="olQ-I7-Ihe"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="O4N-5o-P2M"/>
                     </view>
+                    <connections>
+                        <outlet property="mapView" destination="ASP-3w-vso" id="xJc-RK-UhT"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JQZ-1g-Glq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1564" y="-175"/>
+            <point key="canvasLocation" x="-1565.625" y="-175.35211267605635"/>
         </scene>
         <!--Tab Bar Contr-->
         <scene sceneID="CWV-eC-Uk7">
@@ -243,7 +362,6 @@
                                                 <fontDescription key="fontDescription" name="ITCAvantGardeStd-Demi" family="ITC Avant Garde Gothic Std" pointSize="28"/>
                                                 <state key="normal" title="GO"/>
                                                 <connections>
-                                                    <action selector="doLogin:" destination="BYZ-38-t0r" eventType="touchUpInside" id="lmm-73-Kgd"/>
                                                     <segue destination="lhE-hW-a0M" kind="show" identifier="doLoginSegue" id="i9F-Ft-03g"/>
                                                 </connections>
                                             </button>
@@ -487,9 +605,6 @@
                                                 <color key="backgroundColor" name="OrangeRed"/>
                                                 <fontDescription key="fontDescription" name="ITCAvantGardeStd-Demi" family="ITC Avant Garde Gothic Std" pointSize="28"/>
                                                 <state key="normal" title="GO"/>
-                                                <connections>
-                                                    <action selector="doLogin:" destination="gjE-mN-ckg" eventType="touchUpInside" id="Qhb-nv-TS4"/>
-                                                </connections>
                                             </button>
                                         </subviews>
                                         <constraints>
