--- a/WIMM/Base.lproj/Main.storyboard
+++ b/WIMM/Base.lproj/Main.storyboard
@@ -71,7 +71,7 @@
                                     </textField>
                                 </subviews>
                             </stackView>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="8oP-rU-zvU">
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" scrollEnabled="NO" rotateEnabled="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8oP-rU-zvU">
                                 <rect key="frame" x="15" y="331" width="290" height="175"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="175" id="P5O-0R-65c"/>
@@ -131,7 +131,9 @@
         <scene sceneID="Ccu-od-e0o">
             <objects>
                 <navigationController id="zok-9L-ZJj" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="My places" id="RBQ-G9-vGX"/>
+                    <tabBarItem key="tabBarItem" title="My places" image="glyphLugares" id="RBQ-G9-vGX">
+                        <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="-3"/>
+                    </tabBarItem>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="XLa-uD-jbC">
                         <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -149,7 +151,7 @@
             <objects>
                 <viewController title="MY PLACES" id="g7G-MP-A05" customClass="PlacesList" customModule="WIMM" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="E4G-YX-sQm">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="OXc-DM-0hV">
@@ -209,7 +211,9 @@
         <scene sceneID="HRd-gv-yaX">
             <objects>
                 <navigationController id="d5k-4L-DtQ" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Map" id="73N-wJ-f4f"/>
+                    <tabBarItem key="tabBarItem" title="Map" image="glyphMapa30" id="73N-wJ-f4f">
+                        <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="-3"/>
+                    </tabBarItem>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="RGS-RP-tip">
                         <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -227,29 +231,22 @@
             <objects>
                 <viewController title="Map VC" id="TAN-b6-W4U" customClass="MapViewController" customModule="WIMM" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="k1B-ef-huY">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" pitchEnabled="NO" showsBuildings="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Od3-0Q-hhC">
-                                <rect key="frame" x="0.0" y="64" width="320" height="425"/>
+                                <rect key="frame" x="0.0" y="64" width="320" height="455"/>
                                 <connections>
                                     <outlet property="delegate" destination="TAN-b6-W4U" id="Fyf-xQ-dKF"/>
                                 </connections>
                             </mapView>
-                            <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nyi-lp-C0r">
-                                <rect key="frame" x="0.0" y="489" width="320" height="30"/>
-                                <color key="backgroundColor" name="OrangeRed"/>
-                                <state key="normal" title="Add Place">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                            </button>
                             <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uJ6-5q-5Bn" userLabel="LocateMeButton">
-                                <rect key="frame" x="30" y="434" width="40" height="40"/>
+                                <rect key="frame" x="15" y="454" width="50" height="50"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="J5F-Ol-S0V"/>
-                                    <constraint firstAttribute="width" constant="40" id="uqg-ej-Ndf"/>
+                                    <constraint firstAttribute="height" constant="50" id="J5F-Ol-S0V"/>
+                                    <constraint firstAttribute="width" constant="50" id="uqg-ej-Ndf"/>
                                 </constraints>
-                                <state key="normal" image="location4"/>
+                                <state key="normal" image="iconoLocation-11"/>
                                 <connections>
                                     <action selector="locateMe" destination="TAN-b6-W4U" eventType="touchUpInside" id="mnB-BQ-STF"/>
                                 </connections>
@@ -258,15 +255,11 @@
                         <color key="backgroundColor" name="LittleGray"/>
                         <constraints>
                             <constraint firstItem="Od3-0Q-hhC" firstAttribute="trailing" secondItem="ZMf-Wy-MMU" secondAttribute="trailing" id="2kR-cj-FRx"/>
-                            <constraint firstItem="uJ6-5q-5Bn" firstAttribute="leading" secondItem="ZMf-Wy-MMU" secondAttribute="leading" constant="30" id="4Kg-es-I1I"/>
-                            <constraint firstItem="Nyi-lp-C0r" firstAttribute="top" secondItem="Od3-0Q-hhC" secondAttribute="bottom" id="7iK-cB-Z7H"/>
                             <constraint firstItem="Od3-0Q-hhC" firstAttribute="leading" secondItem="ZMf-Wy-MMU" secondAttribute="leading" id="Ay4-1f-kUB"/>
-                            <constraint firstItem="Nyi-lp-C0r" firstAttribute="leading" secondItem="ZMf-Wy-MMU" secondAttribute="leading" id="C16-7m-LST"/>
-                            <constraint firstItem="Nyi-lp-C0r" firstAttribute="top" secondItem="uJ6-5q-5Bn" secondAttribute="bottom" constant="15" id="Epc-Ga-CJK"/>
-                            <constraint firstItem="Nyi-lp-C0r" firstAttribute="centerX" secondItem="k1B-ef-huY" secondAttribute="centerX" id="Jda-aw-Sjr"/>
+                            <constraint firstItem="ZMf-Wy-MMU" firstAttribute="bottom" secondItem="uJ6-5q-5Bn" secondAttribute="bottom" constant="15" id="U3A-jj-3aU"/>
+                            <constraint firstItem="uJ6-5q-5Bn" firstAttribute="leading" secondItem="ZMf-Wy-MMU" secondAttribute="leading" constant="15" id="VNQ-18-4Ck"/>
+                            <constraint firstItem="Od3-0Q-hhC" firstAttribute="bottom" secondItem="ZMf-Wy-MMU" secondAttribute="bottom" id="f5d-rT-ecp"/>
                             <constraint firstItem="Od3-0Q-hhC" firstAttribute="top" secondItem="ZMf-Wy-MMU" secondAttribute="top" id="sho-HT-GtN"/>
-                            <constraint firstItem="Nyi-lp-C0r" firstAttribute="bottom" secondItem="ZMf-Wy-MMU" secondAttribute="bottom" id="tJo-Lh-6If"/>
-                            <constraint firstItem="ZMf-Wy-MMU" firstAttribute="trailing" secondItem="Nyi-lp-C0r" secondAttribute="trailing" id="xvY-Yk-lGA"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ZMf-Wy-MMU"/>
                     </view>
@@ -284,7 +277,7 @@
             <objects>
                 <viewController title="DETAIL" id="LxR-Q2-JVf" customClass="PlaceDetailVC" customModule="WIMM" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="TsB-gL-TNA">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PLACE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Ua-uC-Nf3">
@@ -436,10 +429,12 @@
         <scene sceneID="CWV-eC-Uk7">
             <objects>
                 <tabBarController id="lhE-hW-a0M" customClass="TabBarContr" customModule="WIMM" customModuleProvider="target" sceneMemberID="viewController">
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Qg3-B4-h4t">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="Qg3-B4-h4t">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" name="LittleGray"/>
+                        <color key="barTintColor" name="DarkBlue"/>
                     </tabBar>
                     <connections>
                         <segue destination="d5k-4L-DtQ" kind="relationship" relationship="viewControllers" id="a1c-i7-94Q"/>
@@ -554,8 +549,10 @@
                         <outlet property="createAccountButton" destination="zGp-dB-sfe" id="wOw-0U-TaD"/>
                         <outlet property="goButton" destination="Qhp-XH-1hS" id="JTP-Ui-frA"/>
                         <outlet property="mailField" destination="lhh-CI-0lX" id="La7-AC-KGv"/>
+                        <outlet property="mainView" destination="8bC-Xf-vdC" id="bFw-68-dLz"/>
                         <outlet property="passField" destination="juA-qD-Xve" id="ybg-6s-Yah"/>
                         <outlet property="recoverPassButton" destination="xdh-jk-i2B" id="7o9-An-Vve"/>
+                        <outlet property="viewGray" destination="28q-OA-VXt" id="Gh7-9B-yyy"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -672,6 +669,15 @@
                         <viewLayoutGuide key="safeArea" id="9we-RF-Ytg"/>
                     </view>
                     <navigationItem key="navigationItem" id="ZfU-Ms-GWC"/>
+                    <connections>
+                        <outlet property="goButton" destination="cGx-bX-mse" id="bjM-Zv-kD9"/>
+                        <outlet property="mailField" destination="mjQ-4J-GbU" id="HG6-s8-hQV"/>
+                        <outlet property="mainView" destination="JSo-HV-Oij" id="7Xl-fh-MnH"/>
+                        <outlet property="passField" destination="kVD-KF-ZL2" id="IrP-E4-J8p"/>
+                        <outlet property="repeatPassField" destination="p40-vj-MTT" id="OZo-hs-cj6"/>
+                        <outlet property="userField" destination="S4I-Np-FGp" id="65r-mE-c9b"/>
+                        <outlet property="viewGray" destination="MTf-p0-apE" id="tDe-I6-UyX"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="l3S-NY-XoJ" sceneMemberID="firstResponder"/>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bbY-sj-gZq">
@@ -778,6 +784,13 @@
                         <viewLayoutGuide key="safeArea" id="7Fv-TH-YHF"/>
                     </view>
                     <navigationItem key="navigationItem" id="25n-pf-lOZ"/>
+                    <connections>
+                        <outlet property="confirmMailField" destination="Tq2-5H-o5y" id="u8Q-n9-VFG"/>
+                        <outlet property="goButton" destination="LCf-IQ-mxR" id="N5I-r4-YnQ"/>
+                        <outlet property="mailField" destination="rdZ-u2-1Mb" id="zc5-w6-fdE"/>
+                        <outlet property="mainView" destination="Emv-f8-8QX" id="Mba-ad-lDF"/>
+                        <outlet property="viewGray" destination="xT4-ig-xiX" id="rFY-1C-VO6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qMg-Cb-eUh" sceneMemberID="firstResponder"/>
             </objects>
@@ -786,7 +799,9 @@
     </scenes>
     <resources>
         <image name="Isologo" width="660" height="857"/>
-        <image name="location4" width="536" height="536"/>
+        <image name="glyphLugares" width="30" height="30"/>
+        <image name="glyphMapa30" width="30" height="30"/>
+        <image name="iconoLocation-11" width="536" height="536"/>
         <namedColor name="BlueSky">
             <color red="0.74099999666213989" green="0.83099997043609619" blue="0.87099999189376831" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
