--- a/Xib/DatePickerTableViewCell.xib
+++ b/Xib/DatePickerTableViewCell.xib
@@ -35,7 +35,7 @@
             <connections>
                 <outlet property="datePicker" destination="bKk-F4-T7J" id="Mq0-D2-Jdf"/>
             </connections>
-            <point key="canvasLocation" x="90.400000000000006" y="36.431784107946029"/>
+            <point key="canvasLocation" x="57" y="44"/>
         </tableViewCell>
     </objects>
 </document>
